--- a/assets/molecules/recipe.css
+++ b/assets/molecules/recipe.css
@@ -69,7 +69,9 @@
     background: var(--light-bg);
 }
 
-#sun-dried-pasta {
+#sun-dried-pasta,
+#curry-dattel-dip,
+#tteokbokki {
     aspect-ratio: 1/1;
     object-fit: cover;
 }
