--- a/assets/organisms/recipe-list.css
+++ b/assets/organisms/recipe-list.css
@@ -14,3 +14,9 @@ main h2 {
     font-weight: 500;
     margin-bottom: 1rem;
 }
+
+@media screen and (min-width: 576px) {
+    main {
+        margin: 3rem 5%;
+    }
+}
