--- a/assets/organisms/recipe-list.css
+++ b/assets/organisms/recipe-list.css
@@ -15,7 +15,7 @@ main h2 {
     margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (max-width: 576px) {
     main {
         margin: 3rem 5%;
     }
