Fixed dish img ratio

--- a/assets/molecules/recipe.css
+++ b/assets/molecules/recipe.css
@@ -71,7 +71,8 @@
 
 #sun-dried-pasta,
 #curry-dattel-dip,
-#tteokbokki {
+#tteokbokki,
+#honeycomb-tofu {
     aspect-ratio: 1/1;
     object-fit: cover;
 }
