--- a/assets/organisms/recipe-list.css
+++ b/assets/organisms/recipe-list.css
@@ -15,6 +15,13 @@ main h2 {
     margin-bottom: 1rem;
 }
 
+.filters {
+    margin-left: 10%;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
+
 @media screen and (max-width: 576px) {
     main {
         margin: 3rem 5%;
