Styling of control elements

--- a/assets/atoms/main.css
+++ b/assets/atoms/main.css
@@ -7,6 +7,7 @@
     --light-bg: #FEF1E5;
     --peach-bg: #FDD8C7;
     --light-gray: #d6d6d6;
+    --medium-gray: rgb(170, 170, 170);
     --dark-gray: #797979;
 }
 
