--- a/assets/organisms/recipe-list.css
+++ b/assets/organisms/recipe-list.css
@@ -20,13 +20,16 @@ main h2 {
     width: 80%;
     border: 1px var(--medium-gray) solid;
     border-radius: 5px;
-    padding: 2rem 0;
+    padding: 2rem;
     margin: 1rem 0;
+    display: flex;
+    gap: 3rem;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.filters {
-    margin-left: 5%;
-    margin-right: auto;
+.topic-filter {
+    
 }
 
 @media screen and (max-width: 576px) {
