--- a/assets/atoms/minireset.css
+++ b/assets/atoms/minireset.css
@@ -35,3 +35,18 @@ video {
   display: block;
   max-width: 100%;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+p,
+li,
+figcaption {
+  max-width: 65ch;
+}
